
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct udp_session {int dummy; } ;


 int SIP_UDP_PORT ;
 int free (struct udp_session*) ;
 int kill_asterisk (struct udp_session*) ;
 int make_udp (struct udp_session*,char*,int ) ;
 scalar_t__ malloc (int) ;
 int printf (char*,...) ;
 int strcmp (char*,char*) ;

int main(int argc, char **argv)
{
 int i = 0;
 char *r_host = ((void*)0);
 struct udp_session *connection_out;


 for (i=0;i<argc;i++) {
  if (!(strcmp(argv[i],"-h"))) {
                        printf("it looks like you want a host entry\n");
                        r_host = argv[i+1];
                        printf("r_host: %s\n", r_host);
                }
        }

 if (!r_host) {
  printf("umm you forgot the -h <host> option!\n");
  return 0;
 }

 if (!(connection_out = (struct udp_session *)malloc(sizeof(struct udp_session)))) {
  printf("malloc failed your computer sucks\n");
  return 0;
 }
 make_udp(connection_out, r_host, SIP_UDP_PORT);
 kill_asterisk(connection_out);
 free(connection_out);
 return 0;
}
