; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_3407.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_3407.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.udp_session = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"-h\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"it looks like you want a host entry\0A\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"r_host: %s\0A\00", align 1
@.str.3 = private unnamed_addr constant [38 x i8] c"umm you forgot the -h <host> option!\0A\00", align 1
@.str.4 = private unnamed_addr constant [35 x i8] c"malloc failed your computer sucks\0A\00", align 1
@SIP_UDP_PORT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.udp_session*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* %6, align 4
  store i8* null, i8** %7, align 8
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %32, %2
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %35

13:                                               ; preds = %9
  %14 = load i8**, i8*** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8*, i8** %14, i64 %16
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @strcmp(i8* %18, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %31, label %21

21:                                               ; preds = %13
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i8**, i8*** %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = add nsw i32 %24, 1
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8*, i8** %23, i64 %26
  %28 = load i8*, i8** %27, align 8
  store i8* %28, i8** %7, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8* %29)
  br label %31

31:                                               ; preds = %21, %13
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %6, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %6, align 4
  br label %9

35:                                               ; preds = %9
  %36 = load i8*, i8** %7, align 8
  %37 = icmp ne i8* %36, null
  br i1 %37, label %40, label %38

38:                                               ; preds = %35
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %55

40:                                               ; preds = %35
  %41 = call i64 @malloc(i32 4)
  %42 = inttoptr i64 %41 to %struct.udp_session*
  store %struct.udp_session* %42, %struct.udp_session** %8, align 8
  %43 = icmp ne %struct.udp_session* %42, null
  br i1 %43, label %46, label %44

44:                                               ; preds = %40
  %45 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.4, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %55

46:                                               ; preds = %40
  %47 = load %struct.udp_session*, %struct.udp_session** %8, align 8
  %48 = load i8*, i8** %7, align 8
  %49 = load i32, i32* @SIP_UDP_PORT, align 4
  %50 = call i32 @make_udp(%struct.udp_session* %47, i8* %48, i32 %49)
  %51 = load %struct.udp_session*, %struct.udp_session** %8, align 8
  %52 = call i32 @kill_asterisk(%struct.udp_session* %51)
  %53 = load %struct.udp_session*, %struct.udp_session** %8, align 8
  %54 = call i32 @free(%struct.udp_session* %53)
  store i32 0, i32* %3, align 4
  br label %55

55:                                               ; preds = %46, %44, %38
  %56 = load i32, i32* %3, align 4
  ret i32 %56
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @make_udp(%struct.udp_session*, i8*, i32) #1

declare dso_local i32 @kill_asterisk(%struct.udp_session*) #1

declare dso_local i32 @free(%struct.udp_session*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
